# CMakePrototype

./: .gitignore  CMakeLists.txt  readme.md
apps/: CMakeLists.txt  main.cpp
include/jtest/: CMakeLists.txt  jlog.hpp  jtest.cxx  jtest.hpp
include/myproject/: add.h
src/: CMakeLists.txt  add.cpp  add.hxx
test/: CMAkeLists.txt  CMakeLists.txt  test.cpp  test2.cpp
